v0.8 - Pending
	+ Preference to preload images for speeding up navigation (Mike Massonnet)
	+ Ability to delete an image (Bjoern Martensen/Luzi)
	+ Added French translation (Mike Massonnet)
	+ Added Polish translation (Tomasz Dominikowski)

v0.7.3 - August 2, 2006
	+ Fix crash when loading images in certain circumstances (Bjoern Martensen)

v0.7.2 - August 1, 2006
	+ Preference to automatically start the slideshow in fullscreen mode
	+ Background image search process to load image faster (Bjoern Martensen)
	+ Added cli argument: -s or --slideshow to start in slideshow mode
	+ Added cli argument: -f or --fullscreen to start in fullscreen mode
	+ Additional shortcuts: +/- for zooming in/out (Bjoern Martensen)
	+ Fixed .desktop mimetypes (Eugenia Loli-Queru)
	+ Added German translation (Bjoern Martensen)
	+ Added Spanish translation (Isidro Arribas)

v0.7.1 - July 9, 2006
	+ Toolbar style follows gnome preference (requires optional gnome-python
	  dependency) (Eugenia Loli-Queru)
	+ Skip hidden files/dirs when loading images
	+ Bug: Caps-lock breaks some shortcuts (Abisser T'khin)
	+ Bug fixes

v0.7 - June 20, 2006
	+ Slideshow mode (delay time, randomize order, disable screensaver preferences)
	+ Display animated images
	+ Edit > Open in Editor
	+ Image wrapping options: yes/no/prompt (Bjoern Martensen)
	+ Cleaned up menubar, preferences
	+ Set go navigation items' sensitivities based on context
	+ Bug: 1:1 images are sometimes incorrectly set to fit (Bjoern Martensen)
	+ Many bugfixes, interface tweaks

v0.6 - May 29, 2006
	+ In fullscreen mode, hide mouse cursor after 2 seconds of no movement
	+ Option to wrap around imagelist
	+ When in zoom-to-fit mode, fit the image when it's rotated
	+ Show broken icon if image not found (i.e. deleted) (Bjoern Martensen)
	+ Bug: Ensure that scrollbars don't show up unless needed
	+ Bug: Don't resize an image if it's at 100% zoom (David Shakaryan)
	+ Other small bugfixes

v0.5 - May 1, 2006